creacion_seccion_de_contacto

--- a/CER1-DIAZJOSE/index.html
+++ b/CER1-DIAZJOSE/index.html
@@ -61,11 +61,35 @@
                     <img src="img/foto1.jpg" class="img-fluid rounded">
                 </div>
             </section>
-        
+            <section id="Contacto" class="row align-items-center text-center">
+                <div class="col-md-6">
+                    <div class="logo-container">
+                        <h1>Clases con Rita</h1>
+                        <p>Aprendizaje | Reforzamiento | Apoyo | Didactica</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fab fa-google"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="contact-form">
+                        <h3><i class="fas fa-envelope"></i> Contactanos</h3>
+                        <form action="#" method="post">
+                            <input type="text" name="name" placeholder="indique su nombre" required>
+                            <input type="email" name="email" placeholder="escriba su email" required>
+                            <input type="text" name="motivo" placeholder="indique el motivo de su consulta" required>
+                            <textarea name="message" placeholder="escriba su consulta/mensaje" rows="4" required></textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
         <footer>
             <p>hecho por Jose Diaz
               <br>
-                todos los derechos reservados uwu
+                todos los derechos reservados
               <br>
               2025
             </p>
